--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         .contact-button {
             background-color: white;
-            color: #007bff;
+            color: #091e42;
             border: none;
             padding: 10px 20px;
             font-size: 1em;
